修正跑版問題

--- a/DehMakeSwiftUI--iOS--Info.plist
+++ b/DehMakeSwiftUI--iOS--Info.plist
@@ -4,13 +4,13 @@
 <dict>
 	<key>CFBundleDocumentTypes</key>
 	<array>
-		<dict>
+		<!-- <dict>
 			<key>CFBundleTypeName</key>
-			<string></string>
+			<string>DEH Make II</string>
 			<key>LSHandlerRank</key>
 			<string>None</string>
 		</dict>
-		<dict/>
+		<dict/> -->
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
